<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="30dp"
    android:paddingRight="30dp"
    android:paddingLeft="30dp">
    <LinearLayout
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="start">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="80dp"
            android:elevation="10dp"
            android:padding="20dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/profileImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profilimg"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="10dp">
                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="1dp"
                    android:paddingEnd="5dp"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black">
                </TextView>
                <TextView
                    android:id="@+id/profileLastname"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lastName"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:id="@+id/bolum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mezuniyet"
                    android:textSize="20sp"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:gravity="end">
                </TextView>
                <TextView
                    android:id="@+id/profileBolum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mezuniyet"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:gravity="end"
                    android:textColor="@color/common_google_signin_btn_text_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="start">
                <TextView
                    android:id="@+id/mezuniyet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bolum"
                    android:textSize="20sp"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_gravity="start"
                    android:gravity="end">
                </TextView>
                <TextView
                    android:id="@+id/profileMezuniyet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bolum"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:textColor="@color/common_google_signin_btn_text_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:id="@+id/profilGirisYili"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/giris_yili"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="end">
                </TextView>
                <TextView
                    android:id="@+id/and"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/tire"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:layout_gravity="center">
                </TextView>
                <TextView
                    android:id="@+id/profileMezunYili"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mezun_yili"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="start" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <TextView
            android:text="@string/prompt_email"
            android:id="@+id/profilemail"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"/>
        <Button
            android:id="@+id/logOutbtn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/logOutBtn"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>