<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="horizontal">
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabBarLayout"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="center"
        app:tabMode="fixed"
        app:tabIndicatorColor="@color/cardview_dark_background"
        app:tabBackground="@color/cardview_light_background"
        android:layout_alignParentBottom="true"
        android:paddingBottom="5dp">
        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/mainHomeName">
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/searchFragmentName">
        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/profilFragmentName">
        </com.google.android.material.tabs.TabItem>
    </com.google.android.material.tabs.TabLayout>
</RelativeLayout>